--- a/phantom_mask_api_server/docker-compose.yaml
+++ b/phantom_mask_api_server/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - 8000:8000
     volumes:
       - ./db:/app/db
+    environment:
+      - ENV=development
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
